infrastructure/scratch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scratch
  namespace: scratch
  labels:
    app.kubernetes.io/name: scratch
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: scratch
    app.kubernetes.io/component: web
