infrastructure/scratch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scratch
  namespace: scratch
  labels:
    app.kubernetes.io/name: scratch
spec:
  ingressClassName: nginx
  rules:
    - host: scratch.mbtux.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scratch
                port:
                  number: 80
